ABPlayer/web/static/css/library.css
#library-page {width: 100%; height: 100%}

#library-page-content {
  display: flex;
  width: 100%;
  height: 100%;
}

#filter-menu {
  display: flex;
  overflow: hidden;
  flex: none;
  flex-wrap: wrap;
  align-content: start;
  flex-direction: column;
  height: 100%;
  max-width: 100%;
  background-color: var(--cards-bg);
  text-wrap: nowrap;
  transition: max-width .15s ease-in-out;
}
#filter-menu.collapsed {max-width: 15px}
#filter-menu #filter-menu-toggle-btn {
  height: 100%;
  width: 15px;
  background-color: var(--central-frame-bg);
  background-image: url(../images/angle_right.svg);
  background-repeat: no-repeat;
  background-size: 0.6em;
  background-position: center;
  cursor: pointer;
}
#filter-menu.collapsed #filter-menu-toggle-btn {
  background-image: url(../images/angle_left.svg);
}
#filters-container {
  padding: 10px;
  max-width: 160px;
  font-size: small;
  max-height: calc(100% - 20px);
}
#search-in-library-input-line {}
#search-in-library-input-line input {
  max-width: calc(100% - 35px);
}
#reverse-checkbox {margin-top: 6px; margin-bottom: 16px;}

#filter-by-sections {display: inline; max-height: 90%}
.filter-by-section-btn {
  margin-bottom: 4px;
  font-size: medium;
  font-weight: bold;
}
.filter-by-section-btn.disabled {}
.filter-by-section {
  overflow:auto;
  margin-bottom: 16px;
  text-wrap: pretty;
  max-height: 40%;
}
.filter-by-section::-webkit-scrollbar-thumb {border-radius: 4px}
.filter-by-section-item {margin-bottom: 2px}
.filter-by-section-item.checked {
  display: flex;
  align-items: center;
  padding-left: 4px;
  font-weight: bold;
}
.filter-by-section-item.checked::before {
  content: "";
  background-image: url(../images/cross.svg);
  background-repeat: no-repeat;
  margin-right: 4px;
  min-width: 1em;
  max-width: 1em;
  display: block;
  height: 1em;
}

#library {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  margin-top: 8px;
  margin-left: 8px;
}

#library-title {
  font-size: large;
  font-weight: bold;
}

#library-sections {
  width: 100%;
  height: 100%;
  margin-top: 4px;
  border-top: solid 3px var(--cards-bg);
}
#library-sections-buttons {display: flex}
.section-button {
  padding: 4px 8px;
  margin-top: -2px;
  border-top: solid 2px transparent;
  cursor: pointer;
}
.section-button.active {
  font-weight: bold;
  border-top-color: var(--dim-fg);
}
#library-sections-container {
  max-height: 90%;
  height: 90%;
  padding-right: 8px;
  overflow-y: auto;
}
.books-section::before {
  content: "Ничего не найдено";
  top: 50%;
  left: 40%;
  position: relative;
}
.books-section {height: 100%}
.books-section:has(.book-card)::before {display: none}
.books-section.loading::after {
  content: "";
  display: block;
  height: 3em;
  background-image: url(../images/loading.gif);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}
.book-card {
  display: flex;
  max-height: 200px;
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 4px;
  background-color: var(--cards-bg);
  transition: box-shadow .2s ease-in-out;
  cursor: pointer;
}
.book-card:hover {box-shadow: -1px 1px 5px 1px rgba(0, 0, 0, 0.1)}
.book-preview {
  background-size: cover;
  background-position: center;
  min-width: 130px;
  min-height: 180px;
  max-height: 180px;
  border-radius: 4px;
}
.book-content {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  max-height: 180px;
  width: 100%;
  margin-left: 10px;
  overflow: hidden;
}
.book-main-info-container {
  display: flex;
  justify-content: space-between;
}
.book-title {font-size: larger; font-weight: bold}
.book-state {
  display: flex;
  font-size: small;
  text-wrap: nowrap;
  flex-wrap: wrap;
}
.book-state > * {display: flex}
.book-state > *::before {
  content: "";
  width: 1em;
  height: 1em;
  margin-right: 4px
}
.book-listening-progress {
  align-items: center;
  margin-right: 8px;
  margin-bottom: 2px;
}
.book-listening-progress::before {background-image: url(../images/clock.svg)}
.book-adding-date::before {background-image: url(../images/calendar.svg)}
.book-actions {display: flex}
.book-actions > * {padding: 4px; border-radius: 4px;}
.book-actions > *:not(:first-child):not(:last-child) {margin-left: 12px; margin-right: 12px;}
.book-actions > *:hover:not(.disabled) {transform: scale(1.1)}
.book-actions > *:active:not(.disabled) {margin-bottom: -4px}
.book-actions .icon-btn::after {
  width: 1.5em;
  height: 1.5em;
  transition: background-image .15s ease-in-out;
  transform-origin: center;
}
.toggle-favorite-btn::after {background-image: url(../images/star.svg)}
.toggle-favorite-btn.active::after {background-image: url(../images/star_fill.svg)}
.download-btn::after {background-image: url(../images/download.svg)}
.remove-btn::after {background-image: url(../images/cross.svg)}
.delete-btn::after {background-image: url(../images/trash.svg)}
.book-actions > .loading::after {background-image: url(../images/loading.gif)}
.book-description {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
}
.book-additional-info {
  display: flex;
  text-wrap: nowrap;
  flex-wrap: wrap;
  font-size: small;
}
.book-additional-info > div {
  display: flex;
  align-items: center;
  margin-right: 8px;
}
.book-additional-info > div::before {
  width: 1em;
  height: 1em;
  margin-right: 4px
}
.book-author::before {content: url(../images/person.svg)}
.book-reader::before {content: url(../images/mic.svg)}
.book-duration::before {content: url(../images/clock.svg)}
.book-series::before {content: url(../images/tag.svg)}
.book-driver::before {content: url(../images/hdd.svg)}

